--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@csstools/normalize.css": "^10.1.0",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.3.1",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
