--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@csstools/normalize.css": "^10.1.0",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.3.1",
+    "firebase": "^6.4.2",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
