--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@csstools/normalize.css": "^10.1.0",
+    "@material-ui/core": "^4.3.3",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.3.1",
     "firebase": "^6.4.2",
@@ -12,6 +13,7 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
+    "react-onclickoutside": "^6.9.0",
     "react-redux": "^7.1.0",
     "react-redux-firebase": "^2.4.0",
     "react-router-dom": "^5.0.1",
