--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "@csstools/normalize.css": "^10.1.0",
     "@material-ui/core": "^4.3.3",
     "aos": "^3.0.0-beta.6",
-    "bootstrap": "^4.3.1",
     "firebase": "^6.4.2",
     "node-sass": "^4.12.0",
-    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
-    "react-onclickoutside": "^6.9.0",
     "react-redux": "^7.1.0",
     "react-redux-firebase": "^2.4.0",
     "react-router-dom": "^5.0.1",
@@ -44,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-plugin-react": "^7.14.3",
     "webpack": "^4.39.1"
   }
 }
