--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "football-feast",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dawidtrojan.github.io/English_PL",
+  "homepage": "https://dawidtrojan.github.io/englishPL-app",
   "dependencies": {
     "@csstools/normalize.css": "^10.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
